<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Online Pizza</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>

    <string name="oliv">Olive</string>
    <string name="Mushroom">Mushroom</string>
    <string name="lettuce">Onion</string>
    <string name="tomatoes">Pineapple</string>
    <string name="spinach">Spinach</string>
    <string name="onion">Sausage</string>
    <string name="bellpeppers">Ham</string>

    <string name="quantity">Quantity</string>
    <string name="initial_quantity_value">2</string>
    <string name="order">Order</string>
    <string name="order_summary_name">Name:<xliff:g example="Vijaya" id="name">%s</xliff:g></string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="OrderReviewMushroom">Add mushrrom ? <xliff:g example="yes" id="mushroom">%s</xliff:g></string>
    <string name="OrderReviewOlives">Add Olive ? <xliff:g example="yes" id="Olive">%s</xliff:g></string>
    <string name="OrderReviewPine">Add pineapple? <xliff:g example="yes" id="pineapple">%s</xliff:g></string>
    <string name="OrderReviewsausage">Add sausage? <xliff:g example="yes" id="sauage">%s</xliff:g></string>
    <string name="orderonions">Add onion? <xliff:g example="yes" id="onion">%s</xliff:g></string>
    <string name="orderspinach">Add Spinach? <xliff:g example="yes" id="Spinach">%s</xliff:g></string>
    <string name="orderHam">Add ham? <xliff:g example="yes" id="ham">%s</xliff:g></string>
    <string name="qunatityOrder">Quantity: <xliff:g example="2" id="quantity">%d</xliff:g></string>
    <string name="Orderprice">Total Price: $ <xliff:g example="10" id="price">%.2f</xliff:g></string>
    <string name="thank_you">Thank you!</string>
    <string name="too_much_coffee">Please select less than one hundred pizzas</string>
    <string name="too_little_coffee">Please select atleast one pizza</string>
    <string name="title_activity_summary">Review</string>
    <string-array name="Feedback">
        <item>Yes</item>
        <item>No</item>
    </string-array>
</resources>