<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aa">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        tools:context="com.example.vijaya.myorder.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/HeaderTextStyle"
                android:text="Cust_Name"
                android:textColor="#120202" />
            <EditText
                android:id="@+id/user_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:inputType="textCapWords" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/HeaderTextStyle"
                android:text="Mail_ID"
                android:textColor="#0C0909" />
            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16sp"
                android:inputType="textCapWords" />
        </LinearLayout>


        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/toppings"
            android:textSize="24sp"
            android:textStyle="bold|italic" />



        <CheckBox
            android:id="@+id/olives"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/oliv"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/jalapenoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/Mushroom"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/tomatoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/tomatoes"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/onion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/onion"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/bellpeppers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/bellpeppers"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/lettuce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/lettuce"
            android:textSize="16sp" />
        <CheckBox
            android:id="@+id/spinach"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:paddingLeft="24dp"
            android:text="@string/spinach"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity"
            android:textSize="24sp"
            android:textStyle="bold|italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:background="@android:color/holo_blue_dark"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:text="@string/initial_quantity_value"
                android:textColor="#000000" />

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/holo_blue_dark"
                android:onClick="increment"
                android:text="+" />


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/sendEmail"
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:background="@android:color/holo_green_dark"
                android:onClick="sendEmail"
                android:text="Pay"
                android:textColor="#0C0C0C"
                android:textColorHighlight="#8BC34A"
                android:textColorLink="#8BC34A"
                android:textSize="24sp" />

            <Button
                android:layout_width="150dp"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:background="@android:color/holo_red_dark"
                android:onClick="submitOrder"
                android:text="Review"
                android:textSize="24sp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>